k8s/policies/networkpolicies/dev/allow-backend-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-postgres
  namespace: fleetops-dev
  labels:
    app.kubernetes.io/name: fleetops-dev
    app.kubernetes.io/environment: dev
    app.kubernetes.io/component: networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: fleetops-postgres
    ports:
    - protocol: TCP
      port: 5432
