k8s/policies/networkpolicies/dev/allow-request-service-calls.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-request-service-calls
  namespace: fleetops-dev
  labels:
    app.kubernetes.io/name: fleetops-dev
    app.kubernetes.io/environment: dev
    app.kubernetes.io/component: networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: fleetops-request-service
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: fleetops-vehicle-service
    ports:
    - protocol: TCP
      port: 8080
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: fleetops-maintenance-service
    ports:
    - protocol: TCP
      port: 8080
